--- a/ux-portfolio/frontend/CSS/components.css
+++ b/ux-portfolio/frontend/CSS/components.css
@@ -1,3 +1,17 @@
+.logo-title{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.logo-title img {
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
+    padding:0.25rem;
+    border-radius: 10px;
+}
+
 .case-study {
     background: white;
     padding: var(--padding);
@@ -10,6 +24,12 @@
     width: 100%;
     height: 300px;
     object-fit: cover;
+}
+
+.banner-image {
+    width: 100%;
+    height: 300px;
+    object-fit:contain;
 }
 
 .skip-link {
