Add padding to body in media queries for improved layout on smaller screens

--- a/ux-portfolio/frontend/CSS/media-queries.css
+++ b/ux-portfolio/frontend/CSS/media-queries.css
@@ -1,5 +1,10 @@
 /* Media Queries */
 @media (max-width: 768px) {
+
+    body {
+    padding: 0 0.5rem;
+    }
+
     .case-studies-container {
         grid-template-columns: 1fr;
     }
