--- a/ux-portfolio/frontend/CSS/layout.css
+++ b/ux-portfolio/frontend/CSS/layout.css
@@ -2,11 +2,17 @@
 body {
     font-family: var(--font-primary);
     background-color: var(--background-color);
-    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
     padding: 0 1rem;
 }
+
+.page-container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: left;
+  }
 
 /* Header Layout */
 header {
