--- a/ux-portfolio/frontend/CSS/components.css
+++ b/ux-portfolio/frontend/CSS/components.css
@@ -24,13 +24,16 @@
     width: 100%;
     height: 300px;
     object-fit: cover;
+    border-radius: 4px;
 }
 
 .banner-image {
     width: 100%;
     height: 300px;
-    object-fit:contain;
+    object-fit:cover;
+    border-radius: var(--border-radius);
 }
+
 
 .skip-link {
     position: absolute;
