--- a/ux-portfolio/frontend/CSS/layout.css
+++ b/ux-portfolio/frontend/CSS/layout.css
@@ -35,17 +35,19 @@ h1, h2, h3 {
 
 h1 {
     font-size: 2.5rem;
+    padding-bottom: 1rem;
 }
 h2 {
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 h3 {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
 }
 
 /*Text layout */
 p {
     max-width: 60ch;
+    font-size:1rem;
 }
 
 /* Case Studies Container Layout */
