--- a/ux-portfolio/frontend/CSS/components.css
+++ b/ux-portfolio/frontend/CSS/components.css
@@ -24,7 +24,7 @@
     width: 100%;
     height: 300px;
     object-fit: cover;
-    border-radius: 4px;
+    border-radius: var(--border-radius);
 }
 
 .banner-image {
@@ -32,6 +32,7 @@
     height: 300px;
     object-fit:cover;
     border-radius: var(--border-radius);
+    margin-bottom: 1rem;
 }
 
 
