--- a/ux-portfolio/frontend/CSS/media-queries.css
+++ b/ux-portfolio/frontend/CSS/media-queries.css
@@ -51,6 +51,11 @@
     h3 {
         font-size: 1rem;
     }
+
+    .prev-btn,
+    .next-btn {
+        display: none;
+    }
 }
 
 @media (max-width: 784px) {
