--- a/ux-portfolio/frontend/CSS/layout.css
+++ b/ux-portfolio/frontend/CSS/layout.css
@@ -38,9 +38,10 @@ h1 {
     margin-bottom: 1rem;
 }
 
-#header-title {
-    padding-bottom: 0;
+#header-title, #case-title-header {
+    margin-bottom: 0;
 }
+
 
 h2 {
     font-size: 1.25rem;
@@ -61,70 +62,47 @@ p {
 .case-studies-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
+    gap: 2rem;
 }
 
-.process-gallery {
-    display: flex;
-    overflow-x: scroll;
-    scroll-snap-type: x mandatory;
-    margin: 2rem 0;
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;     /* Firefox */
-}
-
-.process-gallery img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-    border-radius: 8px;
-    margin-left: 0;
-    margin-right: 0;
-}
-
-.process-image {
-    width: 100%;     
-    flex: 0 0 100%;
-    object-fit: cover;
-    border-radius: 8px;
-    scroll-snap-align: center;
-    margin: 0;
-}
-  
 .gallery-wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
-    gap: 0;
-    position: relative;
-}
-  
-.gallery-wrapper button {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 1;
+    overflow-x: visible;
 }
 
-.gallery-wrapper .prev-btn {
-    left: 0;
+.process-gallery {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 1rem;
+    margin:2rem 0;
+    align-items: center;
+    justify-content: flex-start;
+    overflow-x: scroll;
+    scrollbar-width: thin;
+    scroll-behavior: smooth;
+    scroll-snap-type: x proximity;
+    padding-right: 1rem;
+    padding-left: 0.5rem;
+    &::-webkit-scrollbar {
+        display: none;
+    }
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;     /* Firefox */
 }
 
-.gallery-wrapper .next-btn {
-    right: 0;
-}
-  
-button.prev-btn,
-button.next-btn {
-    font-size: 2rem;
-    background: none;
-    border: none;
-    cursor: pointer;
-    user-select: none;
-}
-  
-button:disabled {
-    opacity: 0.3;
-    cursor: not-allowed;
+.process-image {
+    width: 95%;
+    height: auto;
+    max-width: 100%;
+    max-height: 80vh;
+    object-fit: contain;
+    margin: 0 auto;
+    display: block;
+    border: 1px solid var(--border-color);
+    border-radius: 8px;
+    flex-shrink: 0;
+    scroll-snap-align: center;
 }
